--- a/day_2/class_work/index.html
+++ b/day_2/class_work/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <
+    <img src="flower.jpg" height=" 200px" width=""200px> </body>img
+    <a href="https://www.google.com" target="_blank">Google</a>
+<ol>
+    <li>samriti</li>
+    <li>himanshi</li>
+    <li>anjilina</li>
+    <li>daljit</li>
+</ol>
+</body>
+</html> 
