--- a/day_2/Assignment/index.html
+++ b/day_2/Assignment/index.html
@@ -7,6 +7,7 @@
 	<hr >
     <p>699 Emard Islands, Los Angeles, CA • +1 (555) 196 3655</p>
   </center><br>
+  <h1>Heading</h1>
 
  
   <p align="center"><b>WORK EXPERIENCE</b></p>
